[package]
name = "wolfrpg-map-parser"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Parser for Wolf RPG Editor map files"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "!**/benches/*"]

[dependencies]
encoding_rs = "0.8.35"
serde = { version = "1.0.210", features = ["derive"], optional = true}
serde_json = { version = "1.0.128", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "wolfrpg-map-parser"
required-features = ["serde"]